# websocket-langs

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/echo/: client.py  server.py
tests/: test_http.py
websocket/: http.py  url.py  websockets.py
websockets/: http.py  websockets.py
ws-c/: Makefile
ws-c/src/: http.c  http.h
ws-go/: go.mod  websocket.go  websocket_test.go
ws-python/: .gitignore
ws-python/tests/: test_url.py
ws-python/websocket/: __init__.py
